assume arguments passing